--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,12 +5,11 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
         <item name="android:statusBarColor">#FFFFFF</item>
+        <item name="colorControlActivated">#0084ff</item>
     </style>
 
-    <!-- Add the following lines -->
-    <!-- BootTheme should inherit from AppTheme -->
+
     <style name="BootTheme" parent="AppTheme">
-        <!-- set the generated bootsplash.xml drawable as activity background -->
         <item name="android:background">@drawable/bootsplash</item>
     </style>
 
